assets/mobirise/css/mbr-additional.css
/* ... */
.cid-souSglAu4C button.navbar-toggler {
  outline: none;
  width: 31px;
  height: 20px;
  cursor: pointer;
  transition: all .2s;
  position: relative;
  align-self: center;
}
.cid-souSglAu4C button.navbar-toggler .hamburger span {
  position: absolute;
  right: 0;
  width: 30px;
  height: 2px;
  border-right: 5px;
  background-color: currentColor;
}
.cid-souSglAu4C button.navbar-toggler .hamburger span:nth-child(1) {
  top: 0;
  transition: all .2s;
}
.cid-souSglAu4C button.navbar-toggler .hamburger span:nth-child(2) {
  top: 8px;
  transition: all .15s;
}
.cid-souSglAu4C button.navbar-toggler .hamburger span:nth-child(3) {
  top: 8px;
  transition: all .15s;
}
.cid-souSglAu4C button.navbar-toggler .hamburger span:nth-child(4) {
  top: 16px;
  transition: all .2s;
}
.cid-souSglAu4C nav.opened .hamburger span:nth-child(1) {
  top: 8px;
  width: 0;
  opacity: 0;
  right: 50%;
  transition: all .2s;
}
.cid-souSglAu4C nav.opened .hamburger span:nth-child(2) {
  transform: rotate(45deg);
  transition: all .25s;
}
.cid-souSglAu4C nav.opened .hamburger span:nth-child(3) {
  transform: rotate(-45deg);
  transition: all .25s;
}
.cid-souSglAu4C nav.opened .hamburger span:nth-child(4) {
  top: 8px;
  width: 0;
  opacity: 0;
  right: 50%;
  transition: all .2s;
}
.cid-souSglAu4C .navbar-dropdown {
  padding: .5rem 1rem;
  position: fixed;
}
.cid-souSglAu4C a.nav-link {
  display: flex;
  align-items: center;
  justify-content: center;
}
.cid-souSglAu4C .icons-menu {
  flex-wrap: nowrap;
  display: flex;
  justify-content: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.3rem;
  text-align: center;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .cid-souSglAu4C .navbar {
    height: 77px;
  }
  .cid-souSglAu4C .navbar.opened {
    height: auto;
  }
  .cid-souSglAu4C .nav-item .nav-link:hover::before {
    width: 175%;
    max-width: calc(100% + 2rem);
    left: -1rem;
  }
}
.cid-somC2m3BtA {
  background-image: url("../../../assets/images/background3-2-1900x1200.jpg");
}
.cid-somC2m3BtA .mbr-section-title {
  color: #ffffff;
}
.cid-soyZvBs41L {
  padding-top: 6rem;
  padding-bottom: 6rem;
  background-color: #ffffff;
}
.cid-soyZvBs41L .row {
  align-items: center;
}
@media (max-width: 991px) {
  .cid-soyZvBs41L .row {
    flex-direction: column-reverse;
  }
  .cid-soyZvBs41L .image-wrapper {
    margin-bottom: 2rem;
  }
  .cid-soyZvBs41L .card-wrapper {
    padding: 0 1rem;
  }
}
@media (min-width: 992px) {
  .cid-soyZvBs41L .card-wrapper {
    padding-right: 2rem;
  }
}
.cid-soyZvBs41L .image-wrapper img {
  width: 100%;
  object-fit: cover;
}
.cid-somIkrhmdT {
  padding-top: 0rem;
  padding-bottom: 0rem;
  background-color: #fafafa;
}
.cid-somIkrhmdT .carousel {
  height: 800px;
}
.cid-somIkrhmdT .carousel img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.cid-somIkrhmdT .carousel-item,
.cid-somIkrhmdT .carousel-inner {
  height: 100%;
}
.cid-somIkrhmdT .mbr-overlay {
  z-index: 1;
}
.cid-somIkrhmdT .carousel-caption {
  bottom: 40px;
}
.cid-somIkrhmdT .mobi-mbri-arrow-next {
  margin-left: 5px;
}
.cid-somIkrhmdT .mobi-mbri-arrow-prev {
  margin-right: 5px;
}
.cid-somIkrhmdT .carousel-control:hover {
  background: #1b1b1b;
  color: #fff;
  opacity: 1;
}
.cid-somIkrhmdT .item-wrapper {
  width: 100%;
}
@media (max-width: 767px) {
  .cid-somIkrhmdT .container .carousel-control {
    margin-bottom: 0;
  }
  .cid-somIkrhmdT .content-slider-wrap {
    width: 100% !important;
  }
}
.cid-somIkrhmdT .container .carousel-indicators {
  margin-bottom: 3px;
}
.cid-somIkrhmdT .carousel-control {
  top: 50%;
  width: 60px;
  height: 60px;
  margin-top: -1.5rem;
  font-size: 22px;
  background-color: rgba(0, 0, 0, 0.5);
  border: 2px solid #fff;
  border-radius: 50%;
  transition: all 0.3s;
}
.cid-somIkrhmdT .carousel-control.carousel-control-prev {
  left: 0;
  margin-left: 2.5rem;
}
.cid-somIkrhmdT .carousel-control.carousel-control-next {
  right: 0;
  margin-right: 2.5rem;
}
@media (max-width: 767px) {
  .cid-somIkrhmdT .carousel-control {
    top: auto;
    bottom: 1rem;
  }
}
.cid-somIkrhmdT .carousel-indicators {
  position: absolute;
  bottom: 0;
  margin-bottom: 1.5rem !important;
}
.cid-somIkrhmdT .carousel-indicators li {
  max-width: 15px;
  height: 15px;
  width: 15px;
  max-height: 15px;
  margin: 3px;
  background-color: rgba(0, 0, 0, 0.5);
  border: 2px solid #fff;
  border-radius: 50%;
  opacity: 0.5;
  transition: all 0.3s;
}
.cid-somIkrhmdT .carousel-indicators li.active,
.cid-somIkrhmdT .carousel-indicators li:hover {
  opacity: 0.9;
}
.cid-somIkrhmdT .carousel-indicators li::after,
.cid-somIkrhmdT .carousel-indicators li::before {
  content: none;
}
.cid-somIkrhmdT .carousel-indicators.ie-fix {
  left: 50%;
  display: block;
  width: 60%;
  margin-left: -30%;
  text-align: center;
}
@media (max-width: 768px) {
  .cid-somIkrhmdT .carousel-indicators {
    display: none !important;
  }
}
.cid-somIkrhmdT H5 {
  color: #ffffff;
}
.cid-somIDscSra {
  padding-top: 7rem;
  padding-bottom: 6rem;
  background-color: #ffffff;
}
@media (max-width: 767px) {
  .cid-somIDscSra .row {
    flex-direction: column-reverse;
  }
  .cid-somIDscSra .mbr-figure {
    margin-bottom: 1.5rem;
  }
}
.cid-somIDscSra .row {
  align-items: center;
}
@media (min-width: 992px) {
  .cid-somIDscSra .text-wrapper {
    padding: 0 2rem;
  }
}
.cid-somIDscSra .media-content,
.cid-somIDscSra .mbr-figure {
  align-self: center;
}
.cid-somIDscSra .mbr-figure iframe {
  width: 100%;
}
.cid-splBadcFUn {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #ffffff;
}
.cid-splBadcFUn .row {
  align-items: center;
}
@media (max-width: 991px) {
  .cid-splBadcFUn .row {
    flex-direction: column-reverse;
  }
  .cid-splBadcFUn .image-wrapper {
    margin-bottom: 2rem;
  }
  .cid-splBadcFUn .card-wrapper {
    padding: 0 1rem;
  }
}
@media (min-width: 992px) {
  .cid-splBadcFUn .card-wrapper {
    padding-right: 2rem;
  }
}
/* ... */

